# fast-wmd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-project.sh  install_dependencies.sh
dataset/kusner/: kusner_dataset_parser-2.py  kusner_dataset_parser.py
dataset/triplets/: parser_arxiv_papers.py  wiki-xml-to-txt.py
notebook/: document-distance-study.ipynb
script/: experiments.sh  run-kusner-experiments-2.sh  run-kusner-experiments.sh  run-triplets-experiments.sh
src/: Clustering.cpp  Clustering.hpp  Distances.cpp  Distances.hpp  Tools.cpp  Tools.hpp  main.cpp
wrapper/: .gitignore  C_CONSTANTS.h  C_Distance.h  C_Embeddings.h  C_RWMD.h  C_RelRWMD.h  C_RelWMD.h  C_RelatedWords.h  C_Util.h  C_WMD.h  fastwmd.pxd  fastwmd.pyx  setup.py
